[package]
name = "rustun-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rustun = "0.4.0"
fibers = "0.1"
fibers_global = "0.1"
fibers_timeout_queue = "0.1"
fibers_transport = "0.1.3"
clap = { version = "4", features = ["derive"] }
trackable = "1"
